# onehand-coding-content

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: name_cache.db
src/onehand_coding_content/: __init__.py  budget_algorithm.py  config.py  contractor_selector.py  database.py  flood_detector.py  main.py  name_meanings.py  presentation.py  sounds.py  transparency_meter.py
src/onehand_coding_content/content/: ayuda_distribution_system.py  blockchain_bill_check.py  budget_algorithm.py  contractor_selector.py  corruption_loops.py  cosmic_waves.py  dynasty_simulator.py  edsa_traffic.py  exif_extractor.py  flood_control.py  flood_control_response.py  flood_detector.py  judcial_process.py  justice_simulator.py  justice_system_simulator.py  logo_animation_1.py  logo_animation_2.py  logo_animation_3.py  my_flag.py  name_meaning_explorer.py  philippine_flag.py  pickupline.py  rally_for_justice.py  rice_crisis_simulator.py  spiral_galaxy.py  transparency_meter.py  youtube_downloader.py
