[project]
name = "onehand-coding-content"
version = "0.1.0"
description = "A project to run my FB page content codes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Onehand-Coding", email = "onehand.coding433@gmail.com" },
]
dependencies = [
    "pygame>=2.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onehand_coding_content"]

[project.scripts]
run-code = "onehand_coding_content.main:main"
