[project]
name = "onehand-coding-content"
version = "0.1.0"
description = "A project to run my FB page content codes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Onehand-Coding", email = "onehand.coding433@gmail.com" },
]
dependencies = [
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "pycountry>=24.6.1",
    "pygame>=2.6.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onehand_coding_content"]

[project.scripts]
content = "onehand_coding_content.main:main"
